[package]
authors = ["Remi Lafage <remi.lafage@onera.fr>"]
name = "cobyla"
version = "0.6.0"
edition = "2021"
license-file = "LICENSE.md"
description = "COBYLA optimizer for Rust"
readme = "README.md"
repository = "https://github.com/relf/cobyla/"
keywords = ["optimizer", "optimization", "constrained", "derivative-free"]
categories = ["algorithms", "api-bindings", "science"]
documentation = "https://docs.rs/cobyla"

[features]
serde1 = ["dep:serde", "argmin/serde1"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
libc = "0.2"
argmin-observer-slog = "0.1"
argmin = "0.11"
instant = "0.1"

[dev-dependencies]
approx = "0.5"
