[package]
authors = ["Remi Lafage <remi.lafage@onera.fr>"]
name = "cobyla"
version = "0.7.0"
edition = "2024"
license-file = "LICENSE.md"
description = "COBYLA optimizer for Rust"
readme = "README.md"
repository = "https://github.com/relf/cobyla/"
keywords = ["optimizer", "optimization", "constrained", "derivative-free"]
categories = ["algorithms", "api-bindings", "science"]
documentation = "https://docs.rs/cobyla"

[features]
argmin = ["dep:argmin", "dep:argmin-observer-slog", "dep:web-time"]
serde1 = ["dep:serde", "argmin/serde1"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
libc = "0.2"
argmin = { version = "0.11", optional = true }
argmin-observer-slog = { version = "0.2", optional = true }
web-time = { version = "1.1.0", optional = true }

[dev-dependencies]
approx = "0.5"
