[package]
authors = ["Remi Lafage <remi.lafage@onera.fr>"]
name = "cobyla"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE.md"
description = "COBYLA optimizer for Rust"
readme = "README.md"
repository = "https://github.com/relf/cobyla/"
keywords = ["optimizer", "optimization", "constrained", "derivative-free"]
categories = ["algorithms", "api-bindings", "science"]
documentation = "https://docs.rs/cobyla"

[features]

[dependencies]
libc = "0.2"

[dev-dependencies]
approx = "0.5"
